src/main/java/shakeanapple/backtracker/parser/fblockdiagram/fromscratch/nusmvparsing/antlrgenerated/nusmvParser.java
// Generated from /home/buzhinsky/repos/cxbacktracker/nusmv.g4 by ANTLR 4.7.2
package shakeanapple.backtracker.parser.fblockdiagram.fromscratch.nusmvparsing.antlrgenerated;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;
import shakeanapple.backtracker.parser.fblockdiagram.fromscratch.nusmvparsing.Assignment;
import shakeanapple.backtracker.parser.fblockdiagram.fromscratch.nusmvparsing.NuSMVModule;
import shakeanapple.backtracker.parser.fblockdiagram.fromscratch.nusmvparsing.expression.*;

import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class nusmvParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, WS=29, LINE_COMMENT=30, INT_CONST=31, 
		TRUE=32, FALSE=33, INIT=34, NEXT=35, MODULE=36, VAR=37, ASSIGN=38, DEFINE=39, 
		BOOLEAN=40, COUNT=41, MOD=42, XOR=43, XNOR=44, CASE=45, ESAC=46, ID=47;
	public static final int
		RULE_constant = 0, RULE_composite_id = 1, RULE_atom = 2, RULE_unary_operator_sign = 3, 
		RULE_unary_operator = 4, RULE_binary_operator_sign7 = 5, RULE_binary_operator7 = 6, 
		RULE_binary_operator_sign6 = 7, RULE_binary_operator6 = 8, RULE_binary_operator_sign5 = 9, 
		RULE_binary_operator5 = 10, RULE_binary_operator_sign4 = 11, RULE_binary_operator4 = 12, 
		RULE_binary_operator_sign3 = 13, RULE_binary_operator3 = 14, RULE_ternary_operator = 15, 
		RULE_binary_operator_sign2 = 16, RULE_binary_operator2 = 17, RULE_binary_operator_sign1 = 18, 
		RULE_binary_operator1 = 19, RULE_type = 20, RULE_internal_var_declaration = 21, 
		RULE_possibly_untyped_declaration = 22, RULE_assignment = 23, RULE_definition = 24, 
		RULE_module = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"constant", "composite_id", "atom", "unary_operator_sign", "unary_operator", 
			"binary_operator_sign7", "binary_operator7", "binary_operator_sign6", 
			"binary_operator6", "binary_operator_sign5", "binary_operator5", "binary_operator_sign4", 
			"binary_operator4", "binary_operator_sign3", "binary_operator3", "ternary_operator", 
			"binary_operator_sign2", "binary_operator2", "binary_operator_sign1", 
			"binary_operator1", "type", "internal_var_declaration", "possibly_untyped_declaration", 
			"assignment", "definition", "module"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'['", "']'", "'('", "')'", "':'", "';'", "','", "'!'", 
			"'-'", "'*'", "'/'", "'+'", "'='", "'!='", "'>'", "'>='", "'<'", "'<='", 
			"'&'", "'|'", "'?'", "'<->'", "'->'", "'..'", "'{'", "'}'", "':='", null, 
			null, null, "'TRUE'", "'FALSE'", "'init'", "'next'", "'MODULE'", "'VAR'", 
			"'ASSIGN'", "'DEFINE'", "'boolean'", "'count'", "'mod'", "'xor'", "'xnor'", 
			"'case'", "'esac'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "WS", "LINE_COMMENT", "INT_CONST", "TRUE", 
			"FALSE", "INIT", "NEXT", "MODULE", "VAR", "ASSIGN", "DEFINE", "BOOLEAN", 
			"COUNT", "MOD", "XOR", "XNOR", "CASE", "ESAC", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "nusmv.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	public nusmvParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode INT_CONST() { return getToken(nusmvParser.INT_CONST, 0); }
		public TerminalNode TRUE() { return getToken(nusmvParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(nusmvParser.FALSE, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).exitConstant(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_constant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_CONST) | (1L << TRUE) | (1L << FALSE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Composite_idContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(nusmvParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(nusmvParser.ID, i);
		}
		public List<TerminalNode> INT_CONST() { return getTokens(nusmvParser.INT_CONST); }
		public TerminalNode INT_CONST(int i) {
			return getToken(nusmvParser.INT_CONST, i);
		}
		public Composite_idContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_composite_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).enterComposite_id(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).exitComposite_id(this);
		}
	}

	public final Composite_idContext composite_id() throws RecognitionException {
		Composite_idContext _localctx = new Composite_idContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_composite_id);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(ID);
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(55);
				match(T__0);
				setState(56);
				match(ID);
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(62);
				match(T__1);
				setState(63);
				match(INT_CONST);
				setState(64);
				match(T__2);
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public Expression f;
		public Binary_operator1Context inside;
		public ConstantContext constant;
		public Composite_idContext composite_id;
		public Binary_operator1Context c;
		public Binary_operator1Context o;
		public Binary_operator1Context a1;
		public Binary_operator1Context a2;
		public List<Binary_operator1Context> binary_operator1() {
			return getRuleContexts(Binary_operator1Context.class);
		}
		public Binary_operator1Context binary_operator1(int i) {
			return getRuleContext(Binary_operator1Context.class,i);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public Composite_idContext composite_id() {
			return getRuleContext(Composite_idContext.class,0);
		}
		public TerminalNode NEXT() { return getToken(nusmvParser.NEXT, 0); }
		public TerminalNode CASE() { return getToken(nusmvParser.CASE, 0); }
		public TerminalNode ESAC() { return getToken(nusmvParser.ESAC, 0); }
		public TerminalNode COUNT() { return getToken(nusmvParser.COUNT, 0); }
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).exitAtom(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_atom);
		int _la;
		try {
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				match(T__3);
				setState(71);
				((AtomContext)_localctx).inside = binary_operator1();
				setState(72);
				match(T__4);
				 ((AtomContext)_localctx).f =  ((AtomContext)_localctx).inside.f; 
				}
				break;
			case INT_CONST:
			case TRUE:
			case FALSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				((AtomContext)_localctx).constant = constant();
				 ((AtomContext)_localctx).f =  new Constant((((AtomContext)_localctx).constant!=null?_input.getText(((AtomContext)_localctx).constant.start,((AtomContext)_localctx).constant.stop):null)); 
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(78);
				((AtomContext)_localctx).composite_id = composite_id();
				 ((AtomContext)_localctx).f =  new Variable((((AtomContext)_localctx).composite_id!=null?_input.getText(((AtomContext)_localctx).composite_id.start,((AtomContext)_localctx).composite_id.stop):null), false); 
				}
				break;
			case NEXT:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				match(NEXT);
				setState(82);
				match(T__3);
				setState(83);
				((AtomContext)_localctx).inside = binary_operator1();
				setState(84);
				match(T__4);
				 ((AtomContext)_localctx).f =  new NextOperator(((AtomContext)_localctx).inside.f); 
				}
				break;
			case CASE:
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				match(CASE);

				        List<Expression> conditions = new ArrayList<>();
				        List<Expression> options = new ArrayList<>();
				     
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(89);
					((AtomContext)_localctx).c = binary_operator1();
					 conditions.add(((AtomContext)_localctx).c.f); 
					setState(91);
					match(T__5);
					setState(92);
					((AtomContext)_localctx).o = binary_operator1();
					 options.add(((AtomContext)_localctx).o.f); 
					setState(94);
					match(T__6);
					}
					}
					setState(98); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__8) | (1L << T__9) | (1L << INT_CONST) | (1L << TRUE) | (1L << FALSE) | (1L << NEXT) | (1L << COUNT) | (1L << CASE) | (1L << ID))) != 0) );
				setState(100);
				match(ESAC);
				 ((AtomContext)_localctx).f =  new CaseOperator(conditions, options); 
				}
				break;
			case COUNT:
				enterOuterAlt(_localctx, 6);
				{
				setState(103);
				match(COUNT);

				        List<Expression> arguments = new ArrayList<>();
				     
				setState(105);
				match(T__3);
				setState(106);
				((AtomContext)_localctx).a1 = binary_operator1();
				 arguments.add(((AtomContext)_localctx).a1.f); 
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(108);
					match(T__7);
					setState(109);
					((AtomContext)_localctx).a2 = binary_operator1();
					 arguments.add(((AtomContext)_localctx).a2.f); 
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(117);
				match(T__4);
				 ((AtomContext)_localctx).f =  new CountOperator(arguments); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unary_operator_signContext extends ParserRuleContext {
		public Unary_operator_signContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary_operator_sign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).enterUnary_operator_sign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).exitUnary_operator_sign(this);
		}
	}

	public final Unary_operator_signContext unary_operator_sign() throws RecognitionException {
		Unary_operator_signContext _localctx = new Unary_operator_signContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unary_operator_sign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_la = _input.LA(1);
			if ( !(_la==T__8 || _la==T__9) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Unary_operatorContext extends ParserRuleContext {
		public Expression f;
		public AtomContext atom;
		public Unary_operator_signContext unary_operator_sign;
		public Unary_operatorContext inside;
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public Unary_operator_signContext unary_operator_sign() {
			return getRuleContext(Unary_operator_signContext.class,0);
		}
		public Unary_operatorContext unary_operator() {
			return getRuleContext(Unary_operatorContext.class,0);
		}
		public Unary_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).enterUnary_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).exitUnary_operator(this);
		}
	}

	public final Unary_operatorContext unary_operator() throws RecognitionException {
		Unary_operatorContext _localctx = new Unary_operatorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_unary_operator);
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
			case INT_CONST:
			case TRUE:
			case FALSE:
			case NEXT:
			case COUNT:
			case CASE:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				((Unary_operatorContext)_localctx).atom = atom();
				 ((Unary_operatorContext)_localctx).f =  ((Unary_operatorContext)_localctx).atom.f; 
				}
				break;
			case T__8:
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				((Unary_operatorContext)_localctx).unary_operator_sign = unary_operator_sign();
				setState(128);
				((Unary_operatorContext)_localctx).inside = unary_operator();
				 ((Unary_operatorContext)_localctx).f =  new UnaryOperator((((Unary_operatorContext)_localctx).unary_operator_sign!=null?_input.getText(((Unary_operatorContext)_localctx).unary_operator_sign.start,((Unary_operatorContext)_localctx).unary_operator_sign.stop):null), ((Unary_operatorContext)_localctx).inside.f); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Binary_operator_sign7Context extends ParserRuleContext {
		public TerminalNode MOD() { return getToken(nusmvParser.MOD, 0); }
		public Binary_operator_sign7Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binary_operator_sign7; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).enterBinary_operator_sign7(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).exitBinary_operator_sign7(this);
		}
	}

	public final Binary_operator_sign7Context binary_operator_sign7() throws RecognitionException {
		Binary_operator_sign7Context _localctx = new Binary_operator_sign7Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_binary_operator_sign7);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << MOD))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Binary_operator7Context extends ParserRuleContext {
		public Expression f;
		public Unary_operatorContext f1;
		public Binary_operator_sign7Context inside;
		public Unary_operatorContext f2;
		public List<Unary_operatorContext> unary_operator() {
			return getRuleContexts(Unary_operatorContext.class);
		}
		public Unary_operatorContext unary_operator(int i) {
			return getRuleContext(Unary_operatorContext.class,i);
		}
		public List<Binary_operator_sign7Context> binary_operator_sign7() {
			return getRuleContexts(Binary_operator_sign7Context.class);
		}
		public Binary_operator_sign7Context binary_operator_sign7(int i) {
			return getRuleContext(Binary_operator_sign7Context.class,i);
		}
		public Binary_operator7Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binary_operator7; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).enterBinary_operator7(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).exitBinary_operator7(this);
		}
	}

	public final Binary_operator7Context binary_operator7() throws RecognitionException {
		Binary_operator7Context _localctx = new Binary_operator7Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_binary_operator7);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			((Binary_operator7Context)_localctx).f1 = unary_operator();
			 ((Binary_operator7Context)_localctx).f =  ((Binary_operator7Context)_localctx).f1.f; 
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << MOD))) != 0)) {
				{
				{
				setState(137);
				((Binary_operator7Context)_localctx).inside = binary_operator_sign7();
				setState(138);
				((Binary_operator7Context)_localctx).f2 = unary_operator();
				 ((Binary_operator7Context)_localctx).f =  new BinaryOperator((((Binary_operator7Context)_localctx).inside!=null?_input.getText(((Binary_operator7Context)_localctx).inside.start,((Binary_operator7Context)_localctx).inside.stop):null), _localctx.f, ((Binary_operator7Context)_localctx).f2.f); 
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Binary_operator_sign6Context extends ParserRuleContext {
		public Binary_operator_sign6Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binary_operator_sign6; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).enterBinary_operator_sign6(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).exitBinary_operator_sign6(this);
		}
	}

	public final Binary_operator_sign6Context binary_operator_sign6() throws RecognitionException {
		Binary_operator_sign6Context _localctx = new Binary_operator_sign6Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_binary_operator_sign6);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_la = _input.LA(1);
			if ( !(_la==T__9 || _la==T__12) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Binary_operator6Context extends ParserRuleContext {
		public Expression f;
		public Binary_operator7Context f1;
		public Binary_operator_sign6Context inside;
		public Binary_operator7Context f2;
		public List<Binary_operator7Context> binary_operator7() {
			return getRuleContexts(Binary_operator7Context.class);
		}
		public Binary_operator7Context binary_operator7(int i) {
			return getRuleContext(Binary_operator7Context.class,i);
		}
		public List<Binary_operator_sign6Context> binary_operator_sign6() {
			return getRuleContexts(Binary_operator_sign6Context.class);
		}
		public Binary_operator_sign6Context binary_operator_sign6(int i) {
			return getRuleContext(Binary_operator_sign6Context.class,i);
		}
		public Binary_operator6Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binary_operator6; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).enterBinary_operator6(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).exitBinary_operator6(this);
		}
	}

	public final Binary_operator6Context binary_operator6() throws RecognitionException {
		Binary_operator6Context _localctx = new Binary_operator6Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_binary_operator6);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			((Binary_operator6Context)_localctx).f1 = binary_operator7();
			 ((Binary_operator6Context)_localctx).f =  ((Binary_operator6Context)_localctx).f1.f; 
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9 || _la==T__12) {
				{
				{
				setState(150);
				((Binary_operator6Context)_localctx).inside = binary_operator_sign6();
				setState(151);
				((Binary_operator6Context)_localctx).f2 = binary_operator7();
				 ((Binary_operator6Context)_localctx).f =  new BinaryOperator((((Binary_operator6Context)_localctx).inside!=null?_input.getText(((Binary_operator6Context)_localctx).inside.start,((Binary_operator6Context)_localctx).inside.stop):null), _localctx.f, ((Binary_operator6Context)_localctx).f2.f); 
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Binary_operator_sign5Context extends ParserRuleContext {
		public Binary_operator_sign5Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binary_operator_sign5; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).enterBinary_operator_sign5(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof nusmvListener ) ((nusmvListener)listener).exitBinary_operator_sign5(this);
		}
	}
